홈화면 및 카테고리 UI 개선, 포스트 리스트 제거 등 최신 상태 반영

--- a/categories.html
+++ b/categories.html
@@ -4,7 +4,7 @@ title: Categories
 permalink: /categories/
 ---
 
-<h1>📁 카테고리별 글</h1>
+<h1>🗂️ 카테고리별 글</h1>
 <ul>
   {% assign categories = site.categories | sort %}
   {% for category in categories %}
